# JModelCrossSection

./: CMakeLists.txt  README.md  main.cpp
utils/: MyQuaternion.cpp  MyQuaternion.h
